--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,12 @@ name: CI
 on: 
   push:
     branches:
-      - develop
       - master
+      - development
   pull_request:
     branches:
       - master
-      - develop
+      - development
 
 jobs:
   build:
