--- a/.github/workflows/ci-linter.yml
+++ b/.github/workflows/ci-linter.yml
@@ -1,14 +1,6 @@
 name: CI-Lint
 
-on: 
-  push:
-    branches:
-      - master
-      - development
-  pull_request:
-    branches:
-      - master
-      - development
+on: [push, pull_request]
 
 jobs:
   build:
